compiler-core/src/parse/snapshots/gleam_core__parse__tests__assert_statement_followed_by_statement.snap
---
source: compiler-core/src/parse/tests.rs
expression: assert let a = 10
---
----- SOURCE CODE
assert let a = 10

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:8
  │
1 │ assert let a = 10
  │        ^^^ I was not expecting this

Found the keyword `let`, expected one of: 
- An expression
