compiler-core/src/parse/snapshots/gleam_core__parse__tests__assert_statement_with_message.snap
---
source: compiler-core/src/parse/tests.rs
expression: "assert False as \"Uh oh\""
---
[
    Assert(
        Assert {
            location: SrcSpan {
                start: 0,
                end: 23,
            },
            value: Var {
                location: SrcSpan {
                    start: 7,
                    end: 12,
                },
                name: "False",
            },
            message: Some(
                String {
                    location: SrcSpan {
                        start: 16,
                        end: 23,
                    },
                    value: "Uh oh",
                },
            ),
        },
    ),
]
