compiler-core/src/parse/snapshots/gleam_core__parse__tests__assert_statement_without_expression.snap
---
source: compiler-core/src/parse/tests.rs
expression: assert
---
----- SOURCE CODE
assert

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:6
  │
1 │ assert
  │      ^ The module ended unexpectedly
