compiler-core/src/parse/snapshots/gleam_core__parse__tests__assign_infix_and_match_suffix_of_concat_pattern.snap
---
source: compiler-core/src/parse/tests.rs
expression: "case \"\" {\n    \"prefix\" <> infix <> \"suffix\" -> infix\n}"
---
----- SOURCE CODE
case "" {
    "prefix" <> infix <> "suffix" -> infix
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:23
  │
2 │     "prefix" <> infix <> "suffix" -> infix
  │                       ^^^^^^^^^^^ This pattern is not allowed

A string pattern can only match on a literal string prefix.

Matching on a literal suffix is not possible, because `infix` would have an unknown size.
