compiler-core/src/parse/snapshots/gleam_core__parse__tests__call_in_case_if_guard.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nlet my_string = \"hello\"\ncase my_string {\n  _ if string.length(my_string) > 2 -> io.debug(\"doesn't work!'\")\n}"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:21
  │
4 │   _ if string.length(my_string) > 2 -> io.debug("doesn't work!'")
  │                     ^ Call expression used in case `if` guard clause

Equality and comparison of numbers is all that can be used in an `if` guard clause.
See: https://gleam.run/book/tour/case-expressions.html#checking-equality-and-ordering-in-patterns.

